# MADAI-controller

AnalysisEmulator/: CMakeLists.txt
AnalysisEmulator/CSV_output/: README.md
AnalysisEmulator/DataCreator/: run.sh  settings.dat.OLD
AnalysisEmulator/include/: CSVReader.h  Data.h  DataCreator.h  DataSelector.h  EmulatorConstants.h  EmulatorInterface.h  EmulatorOutputReader.h  ExpResultSelector.h  RunInputReader.h  RunMaster.h  SettingSetter.h  TraceAnalyzer.h  test.h
AnalysisEmulator/root_build/: @  AnalyzeNoNeeded.cxx  CSVToRoot.cxx  ConfigurationsWithCutOnVariables.cxx  DemonstrationEmulator.cxx  DiffRi35.cxx  DiffScaleNuggets.cxx  DrawPriorWithCut.cxx  EmulatorPerformance  FullTest.cxx  HyperPara.cxx  LoadRunMaster.C  MCMC.h  Math.h  OverlapAllTrainingPoints.cxx  RecordSpace.cxx  ReplaceExp.cxx  ReplaceExpTrace.cxx  RunFromConfig.cxx  RunOnItself.cxx  SelectPartOfData.cxx  SimpleModel.cxx  TestModel.cxx  Training_Demonstrate.root  TreeFiller.h  VisualizeData.cxx  checklinear.cxx  chi_square_plot.cxx  emulator_vs_actual.cxx  graph.root  loglikelihood.cxx  loglikelihood.cxx~  loglikelihood.h  newgraph.root  newgraph_Ri50.root  results.txt  temp.cxx  (+4 more)
AnalysisEmulator/src/: CMakeCache.txt  CMakeLists.txt  CSVReader.cxx  DataCreator.cxx  DataSelector.cxx  EmulatorInterface.cxx  EmulatorOutputReader.cxx  ExpResultSelector.cxx  Makefile  ProcessPipe.cxx  RunInputReader.cxx  RunMaster.cxx  RunNumber.sh  SettingSetter.cxx  TraceAnalyzer.cxx  TraceAnalyzer.cxx_backup  cmake_install.cmake  test.cxx
AnalysisEmulator/src/src/: AnalysisEmulator  Makefile  cmake_install.cmake
(+148 files in other folders)
